--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "db": "^3.3.1",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "pg": "^8.7.3"
   }
